# DiRIM_Lensing

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config_example.yaml
scripts/: .gitignore  compare_traditional.py  create_dataset_skirt_epl.py  create_dataset_skirt_tng.py  create_test_observations.py  demo_dataset.py  demo_rim_iterations.py  figures_slides.py  tarp_plot.py  tarp_sample.py  test_chi2.py  test_denoise.py  test_ood_kappa.py  test_ood_kappa_sum.py  test_ood_source.py  test_ood_source_kappa.py  test_sample.py  test_skirt_epl.py  test_skirt_tng.py  train_rim.py
src/: .gitignore
src/dirim_lensing/: __init__.py  configs.py  datasets.py  lensing.py  rims.py  samplers.py  sdes.py  unets.py
